SONAR-17137 Replace JSW with WinSW for running SQ on Windows