@@ -1,55 +1,59 @@
+@rem SonarQube
+@rem Copyright (C) 2009-2022 SonarSource SA
+@rem mailto:info AT sonarsource DOT com
+@rem
+@rem This program is free software; you can redistribute it and/or
+@rem modify it under the terms of the GNU Lesser General Public
+@rem License as published by the Free Software Foundation; either
+@rem version 3 of the License, or (at your option) any later version.
+@rem
+@rem This program is distributed in the hope that it will be useful,
+@rem but WITHOUT ANY WARRANTY; without even the implied warranty of
+@rem MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+@rem Lesser General Public License for more details.
+@rem
+@rem You should have received a copy of the GNU Lesser General Public License
+@rem along with this program; if not, write to the Free Software Foundation,
+@rem Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
 @echo off
 setlocal
 
-rem Copyright (c) 1999, 2006 Tanuki Software Inc.
-rem
-rem Java Service Wrapper general startup script
-rem
+rem Path to the Java executable
+set JAVA_EXE="java"
 
-rem
-rem Resolve the real path of the wrapper.exe
-rem  For non NT systems, the _REALPATH and _WRAPPER_CONF values
-rem  can be hard-coded below and the following test removed.
-rem
-if "%OS%"=="Windows_NT" goto nt
-echo This script only works with NT-based versions of Windows.
-goto :eof
 
-:nt
-rem
-rem Find the application home.
-rem
-rem %~dp0 is location of current script under NT
-set _REALPATH=%~dp0
+rem DO NOT EDIT THE FOLLOWING SECTIONS
+call :check_if_sonar_is_running FAIL || goto:eof
 
-rem Decide on the wrapper binary.
-set _WRAPPER_BASE=wrapper
-set _WRAPPER_EXE=%_REALPATH%%_WRAPPER_BASE%-windows-x86-32.exe
-if exist "%_WRAPPER_EXE%" goto conf
-set _WRAPPER_EXE=%_REALPATH%%_WRAPPER_BASE%-windows-x86-64.exe
-if exist "%_WRAPPER_EXE%" goto conf
-set _WRAPPER_EXE=%_REALPATH%%_WRAPPER_BASE%.exe
-if exist "%_WRAPPER_EXE%" goto conf
-echo Unable to locate a Wrapper executable using any of the following names:
-echo %_REALPATH%%_WRAPPER_BASE%-windows-x86-32.exe
-echo %_REALPATH%%_WRAPPER_BASE%-windows-x86-64.exe
-echo %_REALPATH%%_WRAPPER_BASE%.exe
-pause
-goto :eof
+%JAVA_EXE% -Xms8m -Xmx32m^
+     -Djava.awt.headless=true^
+     --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED^
+     --add-opens=java.base/java.lang=ALL-UNNAMED^
+     --add-opens=java.base/java.nio=ALL-UNNAMED^
+     --add-opens=java.base/sun.nio.ch=ALL-UNNAMED^
+     --add-opens=java.management/sun.management=ALL-UNNAMED^
+     --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED^
+     -cp "..\..\lib\sonar-application-@sqversion@.jar" "org.sonar.application.App"
 
-rem
-rem Find the wrapper.conf
-rem
-:conf
-set _WRAPPER_CONF="%~f1"
-if not %_WRAPPER_CONF%=="" goto startup
-set _WRAPPER_CONF="%_REALPATH%..\..\conf\wrapper.conf"
+goto:eof
 
-rem
-rem Start the Wrapper
-rem
-:startup
-"%_WRAPPER_EXE%" -c %_WRAPPER_CONF%
-if not errorlevel 1 goto :eof
-pause
+:check_if_sonar_is_running
+set "SQ_PROCESS="
+where jps >nul 2>nul
+if %errorlevel% equ 0 (
+    rem give priority to jps command if present
+    for /f "tokens=1" %%i in ('jps -l ^| findstr "org.sonar.application.App"') do set "SQ_PROCESS=%%i"
+) else (
+    rem fallback to wmic command
+    for /f "tokens=2" %%i in ('wmic process where "name='java.exe' and commandline like '%%org.sonar.application.App%%'" get name^, processid 2^>nul ^| findstr "java"') do set "SQ_PROCESS=%%i"
+)
+
+if not [%SQ_PROCESS%]==[] (
+    echo ERROR: Another instance of the SonarQube application is already running with PID %SQ_PROCESS%
+    exit /b 1
+)
+goto:eof
+
+endlocal
 
